--- a/flutter_application/android/app/build.gradle
+++ b/flutter_application/android/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services" // เพิ่ม Google Services Plugin สำหรับ Firebase
 }
 
 android {
@@ -16,7 +17,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "1.8" // แก้ไขเป็น String เพื่อให้ตรงกับ format ที่ถูกต้อง
     }
 
     defaultConfig {
@@ -35,6 +36,9 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            // ปิดการ optimize เพื่อหลีกเลี่ยงปัญหากับ Firebase
+            minifyEnabled false
+            shrinkResources false
         }
     }
 }
@@ -42,3 +46,6 @@ android {
 flutter {
     source = "../.."
 }
+
+// เพิ่ม Google Services Plugin หลังจากส่วน android block เพื่อเชื่อมกับ Firebase
+apply plugin: 'com.google.gms.google-services'
