--- a/flutter_application/android/build.gradle
+++ b/flutter_application/android/build.gradle
@@ -1,3 +1,20 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+        // ถ้ามีปัญหาการเชื่อมต่อกับแพ็กเกจอื่น ๆ สามารถเพิ่ม jcenter() ได้
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.4' // ตรวจสอบให้แน่ใจว่าใช้เวอร์ชันที่รองรับ
+        classpath 'com.google.gms:google-services:4.3.15' // เพิ่ม Google Services Plugin สำหรับ Firebase
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -9,6 +26,7 @@ rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
     project.evaluationDependsOn(":app")
 }
