--- a/flutter_application/pubspec.yaml
+++ b/flutter_application/pubspec.yaml
@@ -32,11 +32,17 @@ dependencies:
     sdk: flutter
   get: ^4.6.5
   dots_indicator: ^2.0.0
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.8.1
+  firebase_storage: ^11.0.0
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.2
+  firebase_app_check: ^0.2.2
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/im00.jpg
-    - assets/images/t4.jpg
+     - assets/images/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
