--- a/flutter_application/pubspec.yaml
+++ b/flutter_application/pubspec.yaml
@@ -68,7 +68,43 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
+    - assets/images/buengsifai1.jpg
+    - assets/images/bamilinchak1.jpg
+    - assets/images/bamilinchak2.jpg
+    - assets/images/bamilinchak3.jpg
+    - assets/images/bamilinchak4.jpg
+    - assets/images/buengsifai2.jpg
+    - assets/images/buengsifai3.jpg
+    - assets/images/buengsifai4.jpg
+    - assets/images/homepage.jpeg
+    - assets/images/lanvela1.jpg
+    - assets/images/lanvela2.jpg
+    - assets/images/lanvela3.jpg
+    - assets/images/lanvela4.jpg
+    - assets/images/bali.jpg
+    - assets/images/lemonarchcafe1.jpg
+    - assets/images/lemonarchcafe2.jpg
+    - assets/images/lemonarchcafe3.jpg
+    - assets/images/makesense1.jpg
+    - assets/images/makesense2.jpg
+    - assets/images/makesense3.jpg
+    - assets/images/makesense4.jpg
+    - assets/images/makesense5.jpg
+    - assets/images/makham.jpeg
+    - assets/images/OrchidPlaceHotel.jpg
+    - assets/images/sapansin.jpg
+    - assets/images/wangkrot1.jpg
+    - assets/images/wangkrot2.jpg
+    - assets/images/wangkrot3.jpg
+    - assets/images/watkhao1.jpg
+    - assets/images/watkhao2.jpg
+    - assets/images/watpo1.jpg
+    - assets/images/watpo2.jpg
+    - assets/images/watpo3.jpg
+    - assets/images/watpo4.jpg
+    - assets/images/watthainum.jpg
+    - assets/images/watthaluang1.jpeg
+    - assets/images/watthaluang2.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
