--- a/flutter_application/android/app/build.gradle
+++ b/flutter_application/android/app/build.gradle
@@ -23,9 +23,8 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.flutter_application_1"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        // แก้ไข minSdkVersion เป็น 23 เพื่อให้ตรงกับข้อกำหนดของ Firebase
+        minSdkVersion 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
