--- a/flutter_application/pubspec.yaml
+++ b/flutter_application/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   firebase_app_check: ^0.3.1+3
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
@@ -66,3 +67,4 @@ flutter:
     - assets/images/watthainum.jpg
     - assets/images/watthaluang1.jpeg
     - assets/images/watthaluang2.jpg
+    - assets/images/logo.png
