--- a/flutter_application/android/gradle/wrapper/gradle-wrapper.properties
+++ b/flutter_application/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
+# Tue Apr 18 10:10:21 ICT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.1.1-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.6.3-all.zip
