--- a/flutter_application/pubspec.yaml
+++ b/flutter_application/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   http: ^1.2.2
   firebase_app_check: ^0.3.1+3
   image_picker: ^0.8.4+4
+  url_launcher: ^6.0.20
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
@@ -68,3 +70,4 @@ flutter:
     - assets/images/watthaluang1.jpeg
     - assets/images/watthaluang2.jpg
     - assets/images/logo.png
+    - assets/images/watthaluang3.jpg
